--- a/en/index.html
+++ b/en/index.html
@@ -755,10 +755,10 @@
 				<div class="consultation__main__info wow fadeInDown">
 					<form action="mail-download.php" method="POST">
 						<div class="input">
-							<input type="text" name="name" placeholder="Имя" required="">
+							<input type="text" name="name" placeholder="Name" required="">
 						</div>
 						<div class="input">
-							<input type="tel" name="phone" placeholder="Телефон" required="">
+							<input type="tel" name="phone" placeholder="Phone" required="">
 						</div>
 						<a style="visibility: hidden" href="gia-investments-guide-ru.pdf" download class="download-button-click">dd</a>
 						<div class="form_button">
